--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <p class="title">TERMS AND PRIVACY POLICY</p>
-<p class="date">Effective Date: 1st January, 2024</p>
+<p class="date">Effective Date: August 22, 2022</p>
 
 <p class="chapter">CHAPTER 1 - Principle of our Privacy Policy</p>
 <p>
