--- a/index.html
+++ b/index.html
@@ -1,7 +1,115 @@
-<p class="title">TERMS AND PRIVACY POLICY</p>
+<div class="wrapper">
+
+    <p class="title">TERMS AND PRIVACY POLICY</p>
 <p class="date">Effective Date: August 22, 2022</p>
 
-<p class="chapter">CHAPTER 1 - Principle of our Privacy Policy</p>
+<p>Thank you for playing our games! This Term and Privacy Policy describes:</p>
+<p class="list">
+    • The ways we collect personal data about you and why we do so
+</p>
+<p class="list">
+    • How we use your personal data, and
+</p>
+<p class="list">
+    • The choices you have about your personal data.
+</p>
+<p>
+    This Privacy Policy applies to Harukanishi Games all products, websites and related services, 
+    which we here collectively call the Service. 
+    To improve our service and comply with the changes of regulations, this Privacy Policy may be updated from time to time 
+    for any reason. 
+    We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here and app updates. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.
+</p>
+
+
+<p class="chapter">CHAPTER 1 - CONTACT US</p>
+<p>If you have questions about data protection, or if you have any requests for 
+    resolving issues with your personal data, we encourage you to contact us through the admin's contact below:</p>
+<pre>
+    Name of the Admin: Harukanishi Games
+    Address: Pułkownika Stanisława Dąbka 15, 840-240 Reda, Poland
+    Email: harukanishigames@outlook.com
+</pre>
+<strong>Principle of our Privacy Policy</strong>
+<p>
+    <span>
+        To provide a greater Service to our players, we have a legitimate interest to collect and process
+        <strong>minimum necessary data.</strong>
+        We will not share your data to any third party (which is not stated in this policy) without user's concent. Your Privacy and Data Security is our priority concern.
+    </span>
+</p>
+
+
+<p class="chapter">CHAPTER 2 - THE DATA WE COLLECT</p>
+<strong>Data you provide us</strong>
+<p class="list">• Your messages to the Service (such as chat logs and player support tickets)</p>
+   <p class="list">• Other data you choose to give us (such as data to identify a lost account or feedback)</p>
+<strong>Data we collect automatically
+</strong>
+<p class="list">• Data about your account and game progress</p>
+<p class="list">• Data about your device, such as device name and operating system and language (for better personalized settings)</p>
+<p class="list">• General location data (for better connection)</p>
+<p class="list">• Data about your stats and use of the Service, such as gameplay data and your interactions inside the Game(for developing better patch for future updates)</p>
+<strong>Data we collect from our partners.
+</strong>
+<p class="list">• Data from analytic tool for improving gaming experience</p>
+
+
+<p class="chapter">CHAPTER 3 - WHY DO WE COLLECT YOUR DATA</p>
+<strong>To make the Service work by the following items:</strong>
+<p class="list">• Create accounts and allow you to play our games and use our Service</p>
+<p class="list">• Verify and confirm payments (If have any In-App Purchase)</p>
+<p class="list">• Provide and deliver products and services you request</p>
+<p class="list">• Update and develop player profiles</p>
+<p class="list">• Develop and improve the Service and player experience</p>
+<p class="list">• Manage our relationship with you</p>
+<p class="list">• Respond to your feedback and questions and provide player support</p>
+<p class="list">• Respond to your feedback and questions and provide player support</p>
+
+
+<p class="chapter">CHAPTER 4 - WHO CAN SEE YOUR DATA</p>
+<p>Apart from Harukanishi Games, your data can be accessed by third party in the following situations:</p>
+<p class="list">• when request from legal entities</p>
+<p class="list">• when doing in-app purchases</p>
+<p class="list">• when using third party ID (such as Facebook) to login</p>
+<p>Unless request by legal entities, no unauthorized person can access your data.</p>
+
+
+<p class="chapter">CHAPTER 5 - YOUR RIGHTS AND OPTIONS</p>
+<strong>Opt-out of targeted advertising</strong>
+<p>
+    You can opt-out of interest-based advertising on mobile applications by checking the privacy
+     settings of your Android or iOS device and selecting "limit ad tracking" 
+     (Apple iOS) or "opt-out of interest based ads" (Android).
+</p>
+<strong>Access the personal data we hold about you.</strong>
+<p>If you request, we will provide you a copy of your personal data in an electronic format.</p>
+<strong>Opt-out of targeted advertising</strong>
+<p>
+    You also have the right to correct your data, have your data deleted,
+    object how we use or share your data, and restrict how we use or share your data.
+</p>
+
+
+<p class="chapter">CHAPTER 6 - AGE LIMITS</p>
+<p>
+    We do not use the Application to knowingly solicit data from or market to children under the age of 13. 
+    If a parent or guardian becomes aware that his or her child has provided us with information without their consent,
+    he or she should contact us at harukanishigames@outlook.com .
+    We will delete such information from our files within a reasonable time.
+</p>
+
+</div>
+
+
+
+
+
+<!--  -->
+<!--  -->
+<!--  -->
+
+<!-- <p class="chapter">CHAPTER 1 - Principle of our Privacy Policy</p>
 <p>
     To provide a greater Service to our players, we have a legitimate interest 
     to process minimum necessary data. We will not share your data to any third party. 
@@ -28,30 +136,50 @@ Data you provide us
     If a parent or guardian becomes aware that his or her child has provided us with information without their consent,
     he or she should contact us at harukanishigames@outlook.com .
     We will delete such information from our files within a reasonable time.
-</p>
+</p> -->
 
 <style>
-    p {
+    .wrapper {
+        max-width: 1024px;
+        margin: 20px auto 80px auto;
+    }
+
+    p, span {
         font-family: 'Calibri';
-        font-size: 20px;
+        font-size: 16px;
+        margin: 20px 0;
+    }
+
+    strong {
+        font-family: 'Calibri';
+        font-size: 16px;
+        margin-bottom: 40px;
     }
 
     pre {
-        font-size: 20px;
+        font-size: 16px;
+        margin: 20px 0;
+    }
+
+    .list {
+        margin: 10px 0 10px 30px;
     }
 
     .title {
         font-size: 46px;
         text-align: center;
+        margin: 30px 0;
     }
 
     .date {
         font-weight: bold;
-        font-size: 26px;
+        font-size: 16px;
     }
 
     .chapter {
-        font-size: 36px;
+        font-size: 24px;
         font-family: 'Calibri';
+        font-weight: bold;
+        margin: 60px 0 30px 0;
     }
 </style>
