--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<head>
+  <title>Privacy Policy | Harukanishi Games</title>
+</head>
+
+<body>
 <div class="wrapper">
 
     <p class="title">TERMS AND PRIVACY POLICY</p>
@@ -137,6 +142,7 @@ Data you provide us
     he or she should contact us at harukanishigames@outlook.com .
     We will delete such information from our files within a reasonable time.
 </p> -->
+</body>
 
 <style>
     .wrapper {
